--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   background: linear-gradient( 195deg,
     #ff90a3b6 , 
     #cbcbcb84 45%, 
-    #fe835e57 65%, 
+    #fe835e57 75%, 
     #ff90a317 85%, 
     #87cfeb82 105%
     ); 
@@ -63,7 +63,7 @@ body {
   content: 'OR';
   position: absolute;
   color: #3535358e;
-  background: #fad7cd;
+  background: #ebdfdc;
   border-radius: 50px;
   width: 33px;
   height: 33px;
@@ -72,4 +72,9 @@ body {
   align-items: center;
   top: -15px;
   right: 45%;
+}
+
+.upload-input{
+  box-shadow: 0px 0px 5px 1px #bcbcbc6f;
+  background-color: rgba(255, 255, 255, 0.47);
 }
