--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@ body {
 
 }
 
-.delay-500{
+.delay-5ms{
   transition: 0.5s;
 }
 
@@ -78,3 +78,4 @@ body {
   box-shadow: 0px 0px 5px 1px #bcbcbc6f;
   background-color: rgba(255, 255, 255, 0.47);
 }
+
