--- a/app/globals.css
+++ b/app/globals.css
@@ -2,137 +2,129 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  font-family: 'Inter', sans-serif;
+	font-family: "Inter", sans-serif;
 }
 .hero-bg {
-  background: linear-gradient( 165deg,
-    #ff90a391 , 
-    #ffffff84 45%, 
-    #fe835ec9 65%, 
-    #ff90a2 85%, 
-    #87cfeb82 105%
-    ); 
+	background: linear-gradient(
+		165deg,
+		#ff90a391,
+		#ffffff84 45%,
+		#fe835ec9 65%,
+		#ff90a2 85%,
+		#87cfeb82 105%
+	);
 
-    /* background: linear-gradient(135deg, #A2D2FF, #C1E1C1); */
+	/* background: linear-gradient(135deg, #A2D2FF, #C1E1C1); */
 
-    /* background: linear-gradient(135deg, #6A85B6, #A9C0E0); */
+	/* background: linear-gradient(135deg, #6A85B6, #A9C0E0); */
 
-    /* background: linear-gradient(135deg, #FF9A9E, #FAD0C4); */
-    /* background: linear-gradient(135deg, #87CEEB, #1E90FF); */
-    /* background: linear-gradient(135deg, #D3B9FF, #FFC3A0); */
-    /* background: linear-gradient(135deg, #FF6F61, #00B2CA); */
-    /* background: radial-gradient(circle, #FFB6C1, #FFC3A0, #FFDEAD); */
-    /* background: radial-gradient(circle, #87CEEB, #1E90FF, #4682B4); */
-    /* background: radial-gradient(circle, #DDA0DD, #BA55D3, #8A2BE2); */
-    /* background: radial-gradient(circle, #B0E0E6, #ADD8E6, #F0F8FF); */
-
+	/* background: linear-gradient(135deg, #FF9A9E, #FAD0C4); */
+	/* background: linear-gradient(135deg, #87CEEB, #1E90FF); */
+	/* background: linear-gradient(135deg, #D3B9FF, #FFC3A0); */
+	/* background: linear-gradient(135deg, #FF6F61, #00B2CA); */
+	/* background: radial-gradient(circle, #FFB6C1, #FFC3A0, #FFDEAD); */
+	/* background: radial-gradient(circle, #87CEEB, #1E90FF, #4682B4); */
+	/* background: radial-gradient(circle, #DDA0DD, #BA55D3, #8A2BE2); */
+	/* background: radial-gradient(circle, #B0E0E6, #ADD8E6, #F0F8FF); */
 }
 
 .auth-bg {
-  background: linear-gradient( 195deg,
-    #ff90a3b6 , 
-    #cbcbcb84 45%, 
-    #fe835e57 75%, 
-    #ff90a317 85%, 
-    #87cfeb82 105%
-    ); 
-
+	background: linear-gradient(
+		195deg,
+		#ff90a3b6,
+		#cbcbcb84 45%,
+		#fe835e57 75%,
+		#ff90a317 85%,
+		#87cfeb82 105%
+	);
 }
 
-.glass-bg{
-  background: rgba(255, 255, 255, 0.468); 
-  backdrop-filter: blur(10px); 
-  -webkit-backdrop-filter: blur(10px);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-
+.glass-bg {
+	background: rgba(255, 255, 255, 0.468);
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
-.delay-5ms{
-  transition: 0.5s;
+.delay-5ms {
+	transition: 0.5s;
 }
-.delay-5ms{
-  transition: 0.3s;
-}
-
-
-.h-line{
-  border: 0.5px solid #3535354c;
-  width: 280px;
-  margin: 10px 0;
-  position: relative;
+.delay-5ms {
+	transition: 0.3s;
 }
 
-.h-line::after{
-  content: 'OR';
-  position: absolute;
-  color: #3535358e;
-  background: #ebdfdc;
-  border-radius: 50px;
-  width: 33px;
-  height: 33px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: -15px;
-  right: 45%;
+.h-line {
+	border: 0.5px solid #3535354c;
+	width: 280px;
+	margin: 10px 0;
+	position: relative;
 }
 
-.upload-input{
-  box-shadow: 0px 0px 5px 1px #bcbcbc6f;
-  background-color: rgba(255, 255, 255, 0.47);
+.h-line::after {
+	content: "OR";
+	position: absolute;
+	color: #3535358e;
+	background: #ebdfdc;
+	border-radius: 50px;
+	width: 33px;
+	height: 33px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: -15px;
+	right: 45%;
 }
 
-.list-card{
-  box-shadow: 0px 0px 10px 1px #8989892d;
-  border: 0.1px solid #89898949;
+.upload-input {
+	box-shadow: 0px 0px 5px 1px #bcbcbc6f;
+	background-color: rgba(255, 255, 255, 0.47);
 }
 
-.overflow-style{
-  overflow: auto;
-  scrollbar-gutter: stable;
-
+.list-card {
+	box-shadow: 0px 0px 10px 1px #8989892d;
+	border: 0.1px solid #89898949;
 }
 
+.overflow-style {
+	overflow: auto;
+	scrollbar-gutter: stable;
+}
 
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 10px;
+	width: 8px;
+	height: 10px;
 }
 
 /* Track (the area the scrollbar moves along) */
 ::-webkit-scrollbar-track {
-  background: #32323200;
-  border-radius: 10px;
+	background: #32323200;
+	border-radius: 10px;
 }
 
 /* Handle (the draggable part of the scrollbar) */
 ::-webkit-scrollbar-thumb {
-  background: #3f3f4680;
-  border-radius: 10px;
-  transition: background 0.3s ease;
+	background: #3f3f4680;
+	border-radius: 10px;
+	transition: background 0.3s ease;
 }
 
-
-.list-btn-title-cont{
-position: relative;
+.list-btn-title-cont {
+	position: relative;
 }
 
-.list-btn-title-cont:hover .list-btn-title{
-  color: white;
-  background-color: rgb(74, 72, 72);
-  pointer-events: none;
-
-
+.list-btn-title-cont:hover .list-btn-title {
+	color: white;
+	background-color: rgb(74, 72, 72);
+	pointer-events: none;
 }
-.list-btn-title{
-  /* font-size: 0px; */
-  position: absolute;
-  font-size: 12px;
-  top: -30px;
-  border-radius: 4px;
-  padding: 5px;
-  transition: 0.2s;
-  color: rgba(255, 255, 255, 0);
-  background-color: rgba(0, 0, 0, 0);
+.list-btn-title {
+	/* font-size: 0px; */
+	position: absolute;
+	font-size: 12px;
+	top: -30px;
+	border-radius: 4px;
+	padding: 5px;
+	transition: 0.2s;
+	color: rgba(255, 255, 255, 0);
+	background-color: rgba(0, 0, 0, 0);
 }
-
