--- a/app/globals.css
+++ b/app/globals.css
@@ -128,3 +128,8 @@ body {
 	color: rgba(255, 255, 255, 0);
 	background-color: rgba(0, 0, 0, 0);
 }
+
+
+.acc-cont:hover .acc-head {
+text-decoration: underline;
+}
